# formatstring

./: CMakeLists.txt  README.md  formatstring.pc.in
examples/: CMakeLists.txt  example.cpp  format.cpp
include/: formatstring.h
include/formatstring/: config.h.in  conversion.h  exceptions.h  format.h  format_traits.h  format_traits_fwd.h  formatitem.h  formatspec.h  formattedvalue.h  formatter.h  formatvalue.h
src/: CMakeLists.txt  config.cpp  exceptions.cpp  format.cpp  formatspec.cpp  formattedvalue.cpp  formatvalue.cpp  strformatitem.cpp  strformatitem.h  valueformatitem.cpp  valueformatitem.h
test/: CMakeLists.txt  format.cpp  test.py  testsuite.cpp
